[package]
name = "shipweight"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Fast, cache-first package size analysis — API server."

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "chrono"] }
moka = { version = "0.12", features = ["future"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
thiserror = "2"
dashmap = "6"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
futures = "0.3"
